--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    //"@google-cloud/vision": "^0.6.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "dateformat": "^1.0.12",
@@ -17,6 +16,7 @@
     "mysql": "^2.12.0",
     "node-wit": "^4.0.0",
     "serve-favicon": "~2.3.0",
-    "traverse": "^0.6.6"
+    "traverse": "^0.6.6",
+    "linq-es6": "^0.2.1"
   }
 }
